--- a/hornets.html
+++ b/hornets.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dog Runs</title>
+    <title>Hornets</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,13 +32,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item active dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Portfolio
                     </a>
@@ -47,7 +47,7 @@
                         <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item active" href="portfolio-item.html">Single Portfolio Item</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -81,61 +81,94 @@
 <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Services
-        <small>Dog Runs</small>
+    <h1 class="mt-4 mb-3">Pest Index
+        <small>Hornets</small>
     </h1>
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Dog Runs</li>
+        <li class="breadcrumb-item active">Hornets</li>
     </ol>
 
-    <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
-
-    <!-- Marketing Icons Section -->
+    <!-- Portfolio Item Row -->
     <div class="row">
-        <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">How Does It Work?</h4>
-                <div class="card-body">
-                    <p class="card-text">Our rodent removal program utilizes a team of trained rat dogs. These dogs are skilled in
-                        locating rodents using their natural sense of smell and quickly eliminating them. Dogs have been used on farms
-                        to hunt pests since humans began farming, and they've been helping hunt for even longer.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
+
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
-        <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">Why Do It?</h4>
-                <div class="card-body">
-                    <p class="card-text">Using our team of rat dogs is cleaner than poison and more efficient than traps. Instead of leaving traps
-                        and waiting for the infestation to come to us, our dogs take us to the infestation and eliminate it. Using poison can get
-                        messy, traps take time to catch pests, and return visits are needed to clean up traps. Dogs find the rats and directly
-                        eliminate them without the slow process of trapping over time.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Hornets form exposed nests in trees, shrubs, underground, on buildings, and in cavities using wood chewed into a paper-like pulp.
+                Their nests typically house 100 to 700 workers and 2 to 6 queens in larger nests. They guard their nests aggressively,
+                with their stings being more dangerous than that of bees.</p>
+            <h3 class="my-3">Bee Preservation</h3>
+            <p>Here at Calvert Exterminators, we recognize the important role that bees serve in Maryland's ecosystem and make it a priority to
+            investigate and remove any hornet nests that pose a threat to bees. If our technicians identify a "wasp nest" as a beehive, we have contacts
+            that can safely remove the hive and relocate the bees. This is an effort to preserve Earth's declining bee populations and their crucial role
+            in pollinating Earth's plants.</p>
+            <h3 class="my-3">Murder Hornets</h3>
+            <p>Asian Giant Hornets (a.k.a "Murder Hornets") began to sighted in the United States, with word of their huge size and extremely painful sting
+                spreading across the internet. In reality, Murder Hornets are very unlikely to be found in Maryland, with few sightings in the state of
+                Washington. There is still a very real threat in Maryland, though: European Hornets. These large hornets feed not only on Maryland honeybees,
+                but also other pollinators such as butterflies and yellow jackets. They are easily spotted by their stripping of bark from nearby trees and shrubs.
+                If you suspect you have European Hornets, stay away from the nest and let us do the rest!</p>
+            <h3 class="my-3">Characteristics</h3>
+            <ul>
+                <li>Look like white ants with a head and cigar-shaped body</li>
+                <li>Two sets of wings of equal length</li>
+                <li>Prefer damp, humid areas</li>
+                <li>Infestations begin during the spring</li>
+            </ul>
+            <!--h3 class="my-3">Diseases</h3>
+            <ul>
+                <li>West Nile Virus</li>
+                <li>Zika Virus</li>
+                <li>Malaria</li>
+                <li>Chikungunya Virus</li>
+                <li>Dengue Virus</li>
+                <li>Eastern Equine Encephalitis Virus</li>
+                <li>Japanese Encephalitis Virus</li>
+                <li>La Crosse Encephalitis</li>
+                <li>St. Louis Encephalitis</li>
+                <li>Yellow Fever</li>
+            </ul-->
         </div>
-        <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">Is It Humane?</h4>
-                <div class="card-body">
-                    <p class="card-text">Our dogs are trained to quickly kill rodents when they have been found. A quick death from our dogs is
-                    painless and more humane than a slow death poisoned in a trap. We know it's ugly business, so we aim to make it as humane as possible.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
+
+    </div>
+    <!-- /.row -->
+
+    <!-- Related Projects Row -->
+    <h3 class="my-4">Related Projects</h3>
+
+    <div class="row">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
         </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
     </div>
     <!-- /.row -->
 
