--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="ants.html">Ants</a>
               <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Cockroaches</a>
+              <a class="dropdown-item" href="roaches.html">Cockroaches</a>
               <a class="dropdown-item" href="fleas.html">Fleas</a>
               <a class="dropdown-item" href="flies.html">Flies</a>
               <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
               <a class="dropdown-item" href="rodents.html">Rodents</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Stinging Pests</a>
+              <a class="dropdown-item" href="hornets.html">Hornets</a>
               <a class="dropdown-item" href="termites.html">Termites</a>
               <a class="dropdown-item" href="spiders.html">Spiders</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Other Pests</a>
@@ -268,7 +268,6 @@
 
     <!-- Portfolio Section -->
     <h2>Most Common Infestations</h2>
-
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
