--- a/roaches.html
+++ b/roaches.html
@@ -1,10 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Rodents</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+
 </head>
+
 <body>
 
+<!-- Navigation -->
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item active dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Portfolio
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+                        <a class="dropdown-item active" href="portfolio-item.html">Single Portfolio Item</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Blog
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                        <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+                        <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+                        <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Other Pages
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                        <a class="dropdown-item" href="full-width.html">Full Width Page</a>
+                        <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
+                        <a class="dropdown-item" href="faq.html">FAQ</a>
+                        <a class="dropdown-item" href="404.html">404</a>
+                        <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">Pest Index
+        <small>Roaches</small>
+    </h1>
+
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Rodents</li>
+    </ol>
+
+    <!-- Roaches -->
+    <div class="card text-white bg-primary my-5 py-4 text-center">
+        <div class="card-body">
+            <h1 class="thick">American Cockroaches</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+        <div class="col-md-4">
+            <!--h3 class="my-3">Pest Description</h3-->
+            <h3 class="thick">Pest Description</h3>
+            <p>The American Cockroach is the largest home invading cockroach in Maryland, invading basements, sewers,
+                and food storage areas. They are active mainly in warmer temperatures, but can also survive in cold temperatures.
+                Once they have invaded a houses' food supply, they will spread disease through direct contact with food and other surfaces.</p>
+            <h3 class="my-3">Characteristics</h3>
+            <ul>
+                <li>Brown</li>
+                <li>2 in. size, oval in shape</li>
+            </ul>
+            <h3 class="my-3">Diseases</h3>
+            <ul>
+                <li>Salmonellosis</li>
+                <li>Typhoid Fever</li>
+                <li>Cholera</li>
+                <li>Dysentery</li>
+                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card text-white bg-primary my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>German Cockroaches</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>German Cockroaches are mainly found in small cracks close to food and water. Preferring damp and humid
+                residential areas, they will invade the kitchens, pantries, and other food preparation areas of the homes in said
+                residential areas. They are very common in American homes and are responsible for many illnesses spread by the surfaces they touch.</p>
+            <h3 class="my-3">Characteristics</h3>
+            <ul>
+                <li>Light brown or tan with two stripes on back</li>
+                <li>1/2 to 5/8 in. size, oval in shape</li>
+            </ul>
+            <h3 class="my-3">Diseases</h3>
+            <ul>
+                <li>Salmonellosis</li>
+                <li>Typhoid Fever</li>
+                <li>Cholera</li>
+                <li>Dysentery</li>
+                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+            </ul>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+    <div class="card text-white bg-primary my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Oriental Cockroaches</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Oriental Cockroaches are mainly found in damp areas with decaying food, such as sewers, basements, firewood piles, and crawl spaces.
+            </p>
+            <h3 class="my-3">Characteristics</h3>
+            <ul>
+                <li>Dark brown or black</li>
+                <li>1 in. size, long in shape</li>
+            </ul>
+            <h3 class="my-3">Diseases</h3>
+            <ul>
+                <li>Salmonellosis</li>
+                <li>Typhoid Fever</li>
+                <li>Cholera</li>
+                <li>Dysentery</li>
+                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+            </ul>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+    <div class="card text-white bg-primary my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Brown-banded Cockroaches</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Brown-banded Cockroaches fly short distances to reach high spots in the kitchens and bathrooms they are likely to reside in.
+                They prefer warm, dry locations and tend to fly toward the ceiling, unlike most other roaches. They are easily distinguished
+                by the banding along their body and wings along with their tendency to fly.</p>
+            <h3 class="my-3">Characteristics</h3>
+            <ul>
+                <li>Black</li>
+                <li>16 in. size, long and oval in shape</li>
+            </ul>
+            <h3 class="my-3">Diseases</h3>
+            <ul>
+                <li>Salmonellosis</li>
+                <li>Typhoid Fever</li>
+                <li>Cholera</li>
+                <li>Dysentery</li>
+                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+            </ul>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+    <!-- Related Projects Row -->
+    <!--h3 class="my-4">Related Projects</h3>
+
+    <div class="row">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+    </div-->
+    <!-- /.row -->
+
+</div>
+<!-- /.container -->
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
