Began working on a small carousel for the index page to display pest info. Carousel will have 3 images and captions per slide.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="navbar-brand">
         <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>Contact Us</a>
         </a>
       </li>
@@ -268,6 +268,53 @@
 
     <!-- Portfolio Section -->
     <h2>Most Common Infestations</h2>
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!-- Slide One - Set the background image for this slide in the line below -->
+        <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Got Termites?</h3>
+            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
+              These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
+              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
+          </div>
+        </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('https://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Dog runs!</h3>
+            <p>Some infestations require special, more natural intervention.
+              Our dog runs involve the usage of our four humanely trained canine exterminators
+              in the sniffing out of rodents, mosquitoes, bed bugs, and termites.
+              Wherever pests may be, our dogs will find them.</p>
+          </div>
+        </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>New contact form!</h3>
+            <p>As part of our website overhaul, a new contact page has been created with convenience in mind,
+              making ordering service as easy as ordering a pizza.
+              Simply follow the prompts to notify us of your needs and we will reply within one business day!</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
